viitteen talletus tietokantaan

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -11,6 +11,8 @@
     Terve {{ session.user_username }}
     <br>
     <a href="/logout"> Kirjaudu ulos</a>
+    <br>
+    <a href="/new_citation">Luo uusi viite</a>
 
 {% else %}
     Et ole kirjautunut sisään
