Lisätty sivu josta näkyy viitteet

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -13,6 +13,8 @@
     <a href="/logout"> Kirjaudu ulos</a>
     <br>
     <a href="/new_citation">Luo uusi viite</a>
+    <br>
+    <a href="/citations">Katso viitteet</a>
 
 {% else %}
     Et ole kirjautunut sisään
