lisää viittenmuokkaus  ja testit

--- a/src/templates/edit_citation.html
+++ b/src/templates/edit_citation.html
@@ -24,7 +24,8 @@
     <button>
         Muokkaa!
     </button>
-
+    
+    <input type="hidden" name="csrf_token" value="{{ session.csrf_token }}">
     <input type="hidden" name="csrf_token" value="{{ session.csrf_token }}">
 
 </form>
