poista turha print

--- a/src/templates/edit_citation.html
+++ b/src/templates/edit_citation.html
@@ -26,6 +26,6 @@
     </button>
     
     <input type="hidden" name="csrf_token" value="{{ session.csrf_token }}">
-    <input type="hidden" name="csrf_token" value="{{ session.csrf_token }}">
+    <input type="hidden" name="citation.id" value="{{ citation.id }}">
 
 </form>
