Lisää error messaget joka sivulle

--- a/src/templates/edit_citation.html
+++ b/src/templates/edit_citation.html
@@ -3,29 +3,42 @@
 <h1>Muokkaa Viitettä</h1>
 
 <form action="/edit_citation" method="post">
+  {% with messages = get_flashed_messages() %} {% if messages %}
+  <ul>
+    {% for message in messages %}
+    <li>{{ message }}</li>
+    {% endfor %}
+  </ul>
+  {% endif %} {% endwith %}
 
-    <div>
-        <label for="authors">Kirjottaja(t)</label> <br>
-        <textarea name="authors" rows="0" cols="50" placeholder="Nimi">{{ citation.authors }}
-        </textarea>
-    </div>
+  <div>
+    <label for="authors">Kirjottaja(t)</label> <br />
+    <textarea name="authors" rows="0" cols="50" placeholder="Nimi">
+{{ citation.authors }}
+        </textarea
+    >
+  </div>
 
-    <div>
-        <label for="title">Otsikko</label> <br>
-        <textarea name="title" rows="0" cols="50" placeholder="Otsikko">{{ citation.title }}
-        </textarea>
-    </div>
+  <div>
+    <label for="title">Otsikko</label> <br />
+    <textarea name="title" rows="0" cols="50" placeholder="Otsikko">
+{{ citation.title }}
+        </textarea
+    >
+  </div>
 
-    <div>
-        <label for="year">Vuosi</label> <br>
-        <input type="text" name="year" placeholder="Vuosi" value="{{ citation.year }}"/>
-    </div>
+  <div>
+    <label for="year">Vuosi</label> <br />
+    <input
+      type="text"
+      name="year"
+      placeholder="Vuosi"
+      value="{{ citation.year }}"
+    />
+  </div>
 
-    <button>
-        Muokkaa!
-    </button>
-    
-    <input type="hidden" name="csrf_token" value="{{ session.csrf_token }}">
-    <input type="hidden" name="citation.id" value="{{ citation.id }}">
+  <button>Muokkaa!</button>
 
+  <input type="hidden" name="csrf_token" value="{{ session.csrf_token }}" />
+  <input type="hidden" name="citation.id" value="{{ citation.id }}" />
 </form>
