--- a/src/templates/new_citation.html
+++ b/src/templates/new_citation.html
@@ -3,26 +3,30 @@
 <h1>Uusi viite</h1>
 
 <form action="/new_citation" method="post">
+  {% with messages = get_flashed_messages() %} {% if messages %}
+  <ul>
+    {% for message in messages %}
+    <li>{{ message }}</li>
+    {% endfor %}
+  </ul>
+  {% endif %} {% endwith %}
 
-    <div>
-        <label for="authors">Kirjottaja(t)</label> <br>
-        <textarea name="authors" rows="0" cols="50" placeholder="Nimi"></textarea>
-    </div>
+  <div>
+    <label for="authors">Kirjottaja(t)</label> <br />
+    <textarea name="authors" rows="0" cols="50" placeholder="Nimi"></textarea>
+  </div>
 
-    <div>
-        <label for="title">Otsikko</label> <br>
-        <textarea name="title" rows="0" cols="50" placeholder="Otsikko"></textarea>
-    </div>
+  <div>
+    <label for="title">Otsikko</label> <br />
+    <textarea name="title" rows="0" cols="50" placeholder="Otsikko"></textarea>
+  </div>
 
-    <div>
-        <label for="year">Vuosi</label> <br>
-        <input type="text" name="year" placeholder="Vuosi" />
-    </div>
+  <div>
+    <label for="year">Vuosi</label> <br />
+    <input type="text" name="year" placeholder="Vuosi" />
+  </div>
 
-    <button>
-        Luo viite
-    </button>
+  <button>Luo viite</button>
 
-    <input type="hidden" name="csrf_token" value="{{ session.csrf_token }}">
-
+  <input type="hidden" name="csrf_token" value="{{ session.csrf_token }}" />
 </form>
