--- a/src/templates/register.html
+++ b/src/templates/register.html
@@ -3,25 +3,28 @@
 <h1>Rekisteröidy</h1>
 
 <form action="/register" method="post">
+  {% with messages = get_flashed_messages() %} {% if messages %}
+  <ul>
+    {% for message in messages %}
+    <li>{{ message }}</li>
+    {% endfor %}
+  </ul>
+  {% endif %} {% endwith %}
 
+  <div>
+    <label for="username">Käyttäjänimi</label>
+    <input type="text" name="username" id="username" />
+  </div>
 
-    <div>
-        <label for="username">Käyttäjänimi</label>
-        <input type="text" name="username" id="username" />
-    </div>
+  <div>
+    <label for="password">Salasana</label>
+    <input type="password" name="password" id="password" />
+  </div>
 
-    <div>
-        <label for="password">Salasana</label>
-        <input type="password" name="password" id="password" />
-    </div>
+  <div>
+    <label for="password_confirm">Salasanan varmistus</label>
+    <input type="password" name="password_confirm" id="password_confirm" />
+  </div>
 
-    <div>
-        <label for="password_confirm">Salasanan varmistus</label>
-        <input type="password" name="password_confirm" id="password_confirm" />
-    </div>
-
-    <button>
-        Rekisteröidy
-    </button>
-    
+  <button>Rekisteröidy</button>
 </form>
