--- a/src/templates/new_citation.html
+++ b/src/templates/new_citation.html
@@ -26,6 +26,11 @@
     <input type="text" name="year" placeholder="Vuosi" />
   </div>
 
+  <div>
+    <label for="given_id">ID</label> <br />
+    <input type="text" name="given_id" placeholder="ID" />
+  </div>
+
   <button>Luo viite</button>
 
   <input type="hidden" name="csrf_token" value="{{ session.csrf_token }}" />
