lisää viitteen ID:n automaattinen generointi

--- a/src/templates/new_citation.html
+++ b/src/templates/new_citation.html
@@ -27,7 +27,7 @@
   </div>
 
   <div>
-    <label for="given_id">ID</label> <br />
+    <label for="given_id">ID (jätä tyhjäksi generoidaksesi automaattisesti)</label> <br />
     <input type="text" name="given_id" placeholder="ID" />
   </div>
 
