Fix adding article citation

--- a/src/templates/new_article.html
+++ b/src/templates/new_article.html
@@ -2,7 +2,7 @@
 
 <h1>Uusi viite</h1>
 
-<form action="/new_book" method="post">
+<form action="/new_article" method="post">
   {% with messages = get_flashed_messages() %} {% if messages %}
   <ul>
     {% for message in messages %}
