--- a/src/templates/new_article.html
+++ b/src/templates/new_article.html
@@ -13,17 +13,17 @@
 
   <div>
     <label for="authors">Kirjottaja(t)</label> <br />
-    <textarea name="authors" rows="0" cols="50" placeholder="Nimi"></textarea>
+    <textarea name="authors" rows="0" cols="50" placeholder="Kirjoittaja(t)"></textarea>
   </div>
 
   <div>
-    <label for="title">Otsikko</label> <br />
-    <textarea name="title" rows="0" cols="50" placeholder="Otsikko"></textarea>
+    <label for="title">Nimi</label> <br />
+    <textarea name="title" rows="0" cols="50" placeholder="Nimi"></textarea>
   </div>
 
   <div>
-    <label for="journal">Lehti</label> <br />
-    <textarea name="journal" rows="0" cols="50" placeholder="Journal"></textarea>
+    <label for="journal">Julkaisu</label> <br />
+    <textarea name="journal" rows="0" cols="50" placeholder="Julkaisu"></textarea>
   </div>
 
   <div>
