Fix new book adding

--- a/src/templates/new_book.html
+++ b/src/templates/new_book.html
@@ -23,12 +23,12 @@
 
   <div>
     <label for="editor">Kustannustoimittaja</label> <br />
-    <textarea name="journal" rows="0" cols="50" placeholder="Kustannustoimittaja"></textarea>
+    <textarea name="editor" rows="0" cols="50" placeholder="Kustannustoimittaja"></textarea>
   </div>
 
   <div>
     <label for="publisher">Kustantaja</label> <br />
-    <textarea name="journal" rows="0" cols="50" placeholder="Kustantaja"></textarea>
+    <textarea name="publisher" rows="0" cols="50" placeholder="Kustantaja"></textarea>
   </div>
 
   <div>
