korjaa editoinnin unittestit

--- a/src/templates/edit_article_citation.html
+++ b/src/templates/edit_article_citation.html
@@ -22,8 +22,8 @@
   </div>
 
   <div>
-    <label for="journal">Muita tietoja</label> <br />
-    <textarea name="journal" rows="0" cols="50" placeholder="lehti">{{ citation.journal }}</textarea>
+    <label for="journal">Julkaisu</label> <br />
+    <textarea name="journal" rows="0" cols="50" placeholder="Julkaisu">{{ citation.journal }}</textarea>
   </div>
 
   <div>
