--- a/src/templates/other_citation.html
+++ b/src/templates/other_citation.html
@@ -27,8 +27,8 @@
   </div>
 
   <div>
-    <label for="other">Muita tietoja</label> <br />
-    <textarea name="other" rows="0" cols="50" placeholder="Muuta"></textarea>
+    <label for="note">Muita tietoja</label> <br />
+    <textarea name="note" rows="0" cols="50" placeholder="Muuta"></textarea>
   </div>
 
   <div>
